--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,173 +10,178 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
-          rel="stylesheet" />
+        rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
-          rel="stylesheet" />
+        rel="stylesheet" />
 
     <link href="assets/css/style.css" rel="stylesheet" />
 
     <script src="assets/js/tailwind.config.js"></script>
 </head>
 
-<body class="min-h-screen flex flex-col lg:flex-row">
-
-<header
-        class="lg:hidden bg-white border-b border-slate-200 px-4 py-3 flex items-center justify-between sticky top-0 z-50">
-    <div class="flex items-center gap-3">
-        <div class="bg-primary p-1.5 rounded-lg text-white">
-            <span class="material-symbols-outlined text-xl block">rocket_launch</span>
-        </div>
-        <h1 class="text-lg font-bold tracking-tight text-slate-900">GopherDrop</h1>
-    </div>
-    <button id="mobile-menu-btn" class="p-2 rounded-lg hover:bg-slate-100 transition-all">
-        <span class="material-symbols-outlined text-2xl text-slate-600">menu</span>
-    </button>
-</header>
-
-<div id="sidebar-overlay" class="fixed inset-0 bg-black/50 z-40 hidden lg:hidden" onclick="closeMobileMenu()"></div>
-
-<div id="sidebar-container"
-     class="flex-shrink-0 fixed lg:relative left-0 top-0 h-full z-50 transform -translate-x-full lg:translate-x-0 transition-transform duration-300 lg:flex"
-     data-mobile-menu></div>
-
-<main class="flex-1 flex flex-col min-h-screen lg:min-h-0 overflow-y-auto">
+<body
+    class="h-screen w-screen overflow-hidden flex flex-col lg:flex-row bg-slate-50 dark:bg-slate-900 transition-colors duration-300">
 
     <header
-            class="hidden lg:flex px-6 md:px-12 py-6 md:py-8 justify-between items-center bg-white border-b border-slate-200 sticky top-0 z-10">
-        <div>
-            <h2 class="text-2xl md:text-3xl font-bold text-slate-900">Local Network</h2>
-            <p class="text-slate-500 font-medium text-sm md:text-base">
-                Scanning for devices on <span id="network-ssid-desktop"
-                                              class="text-primary font-bold">Loading...</span>
-            </p>
-        </div>
-        <div class="flex gap-4">
-            <div
-                    class="bg-white px-4 md:px-5 py-2 md:py-2.5 rounded-full border border-slate-200 flex items-center gap-2 md:gap-3 shadow-sm text-slate-700">
-                <span class="material-symbols-outlined text-primary text-lg md:text-xl">wifi</span>
-                <span data-network-speed class="text-xs md:text-sm font-semibold">
-                        0.0 MB/s
-                    </span>
+        class="lg:hidden bg-white dark:bg-slate-800 border-b border-slate-200 dark:border-slate-700 px-4 py-3 flex-shrink-0 flex items-center justify-between z-50">
+        <div class="flex items-center gap-3">
+            <div class="bg-primary p-1.5 rounded-lg text-white">
+                <span class="material-symbols-outlined text-xl block">rocket_launch</span>
             </div>
+            <h1 class="text-lg font-bold tracking-tight text-slate-900 dark:text-white">GopherDrop</h1>
         </div>
+        <button id="mobile-menu-btn" class="p-2 rounded-lg hover:bg-slate-100 dark:hover:bg-slate-700 transition-all">
+            <span class="material-symbols-outlined text-2xl text-slate-600 dark:text-slate-300">menu</span>
+        </button>
     </header>
 
-    <div class="lg:hidden px-4 py-4 bg-slate-50 border-b border-slate-200">
-        <div class="flex items-center justify-between">
+    <div id="sidebar-overlay" class="fixed inset-0 bg-black/50 z-40 hidden lg:hidden" onclick="closeMobileMenu()"></div>
+
+    <div id="sidebar-container"
+        class="flex-shrink-0 fixed lg:relative left-0 top-0 h-full z-50 transform -translate-x-full lg:translate-x-0 transition-transform duration-300"
+        data-mobile-menu></div>
+
+    <main class="flex-1 h-full overflow-y-auto flex flex-col relative custom-scrollbar">
+
+        <header
+            class="hidden lg:flex px-6 md:px-12 py-6 md:py-8 justify-between items-center bg-white dark:bg-slate-800 border-b border-slate-200 dark:border-slate-700 sticky top-0 z-10 transition-colors">
             <div>
-                <h2 class="text-xl font-bold text-slate-900">Local Network</h2>
-                <p class="text-slate-500 text-xs">
-                    Scanning on <span id="network-ssid-mobile" class="text-primary font-bold">Loading...</span>
+                <h2 class="text-2xl md:text-3xl font-bold text-slate-900 dark:text-white">Local Network</h2>
+                <p class="text-slate-500 dark:text-slate-400 font-medium text-sm md:text-base mt-1">
+                    Scanning for devices on <span id="network-ssid-desktop"
+                        class="text-primary font-bold">Loading...</span>
                 </p>
             </div>
-            <div
-                    class="bg-white px-3 py-1.5 rounded-full border border-slate-200 flex items-center gap-2 shadow-sm">
-                <span class="material-symbols-outlined text-primary text-base">wifi</span>
-                <span data-network-speed class="text-xs font-semibold text-slate-700">
-                        0.0 MB/s
-                    </span>
+            <div class="flex gap-4">
+                <div
+                    class="bg-slate-50 dark:bg-slate-700/50 px-4 md:px-5 py-2 md:py-2.5 rounded-full border border-slate-200 dark:border-slate-600 flex items-center gap-2 md:gap-3 shadow-sm text-slate-700 dark:text-slate-200">
+                    <span class="material-symbols-outlined text-primary text-lg md:text-xl">wifi</span>
+                    <span data-network-speed class="text-xs md:text-sm font-semibold">0.0 MB/s</span>
+                </div>
+            </div>
+        </header>
+
+        <div
+            class="lg:hidden px-4 py-4 bg-slate-50 dark:bg-slate-800/50 border-b border-slate-200 dark:border-slate-700">
+            <div class="flex items-center justify-between">
+                <div>
+                    <h2 class="text-xl font-bold text-slate-900 dark:text-white">Local Network</h2>
+                    <p class="text-slate-500 dark:text-slate-400 text-xs mt-0.5">
+                        Scanning on <span id="network-ssid-mobile" class="text-primary font-bold">Loading...</span>
+                    </p>
+                </div>
+                <div
+                    class="bg-white dark:bg-slate-700 px-3 py-1.5 rounded-full border border-slate-200 dark:border-slate-600 flex items-center gap-2 shadow-sm">
+                    <span class="material-symbols-outlined text-primary text-base">wifi</span>
+                    <span data-network-speed class="text-xs font-semibold text-slate-700 dark:text-slate-200">0.0
+                        MB/s</span>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="flex-1 px-4 lg:px-12 py-4 lg:py-8">
-        <div class="max-w-6xl mx-auto">
+        <div class="flex-1 px-4 lg:px-12 py-4 lg:py-8">
+            <div class="max-w-6xl mx-auto">
 
-            <div class="flex flex-col sm:flex-row sm:items-center justify-between gap-3 mb-4 lg:mb-8">
-                <div class="flex items-center gap-3">
-                    <h3
-                            class="text-[10px] lg:text-sm font-black uppercase tracking-[0.1em] lg:tracking-[0.2em] text-slate-400">
-                        Nearby Devices</h3>
-                    <div class="bg-primary/10 text-primary px-2 py-0.5 rounded-full text-[10px] font-bold"
-                         id="device-count">
-                        0 FOUND
+                <div class="flex flex-col sm:flex-row sm:items-center justify-between gap-3 mb-4 lg:mb-8">
+                    <div class="flex items-center gap-3">
+                        <h3
+                            class="text-[10px] lg:text-sm font-black uppercase tracking-[0.1em] lg:tracking-[0.2em] text-slate-400 dark:text-slate-500">
+                            Nearby Devices
+                        </h3>
+                        <div class="bg-primary/10 text-primary px-2 py-0.5 rounded-full text-[10px] font-bold"
+                            id="device-count">
+                            0 FOUND
+                        </div>
+                    </div>
+
+                    <div class="flex gap-2 w-full sm:w-auto">
+                        <button
+                            class="flex-1 sm:flex-initial flex items-center justify-center gap-2 bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 text-slate-600 dark:text-slate-300 px-4 py-2.5 rounded-xl font-bold hover:bg-slate-50 dark:hover:bg-slate-700 transition-all text-sm shadow-sm"
+                            onclick="openCreateGroupModal()">
+                            <span class="material-symbols-outlined text-lg">group_add</span>
+                            <span class="hidden sm:inline">Save as Group</span>
+                        </button>
+
+                        <button
+                            class="flex-1 sm:flex-initial flex items-center justify-center gap-2 bg-primary text-white px-6 py-2.5 rounded-xl font-bold shadow-lg shadow-primary/20 hover:brightness-105 active:scale-[0.98] transition-all text-sm"
+                            id="send-direct-btn" onclick="sendDirectlyToSelection()">
+                            <span class="material-symbols-outlined text-lg">send</span>
+                            <span>Send Now</span>
+                        </button>
                     </div>
                 </div>
 
-                <div class="flex gap-2 w-full sm:w-auto">
-                    <button
-                            class="flex-1 sm:flex-initial flex items-center justify-center gap-2 bg-slate-100 text-slate-600 px-4 py-2.5 rounded-xl font-bold hover:bg-slate-200 transition-all text-sm"
-                            onclick="openCreateGroupModal()">
-                        <span class="material-symbols-outlined text-lg">group_add</span>
-                        <span class="hidden sm:inline">Save as Group</span>
-                    </button>
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3 lg:gap-6 mb-4 lg:mb-8"
+                    id="device-list"></div>
 
-                    <button
-                            class="flex-1 sm:flex-initial flex items-center justify-center gap-2 bg-primary text-white px-6 py-2.5 rounded-xl font-bold shadow-lg shadow-primary/20 hover:brightness-105 active:scale-[0.98] transition-all text-sm"
-                            id="send-direct-btn" onclick="sendDirectlyToSelection()">
-                        <span class="material-symbols-outlined text-lg">send</span>
-                        <span>Send Now</span>
-                    </button>
+                <div class="flex justify-center items-center gap-1.5 lg:gap-2 mb-4" id="pagination"></div>
+            </div>
+        </div>
+
+        <div id="upload-zone-container" class="px-4 lg:px-12 pb-4 lg:pb-8 flex-shrink-0"></div>
+    </main>
+
+    <div id="create-group-modal" class="fixed inset-0 z-50 hidden">
+        <div class="absolute inset-0 bg-black/50 backdrop-blur-sm transition-opacity" onclick="closeCreateGroupModal()">
+        </div>
+        <div
+            class="absolute inset-4 lg:inset-auto lg:top-1/2 lg:left-1/2 lg:-translate-x-1/2 lg:-translate-y-1/2 lg:w-full lg:max-w-lg bg-white dark:bg-slate-800 rounded-2xl shadow-2xl flex flex-col max-h-[90vh] overflow-hidden transform scale-100 transition-all">
+
+            <div class="px-6 py-5 border-b border-slate-100 dark:border-slate-700 flex items-center justify-between">
+                <div>
+                    <h3 class="text-xl font-bold text-slate-900 dark:text-white">Create New Group</h3>
+                    <p class="text-sm text-slate-500 dark:text-slate-400">Add selected devices to a new group</p>
+                </div>
+                <button
+                    class="p-2 rounded-lg hover:bg-slate-100 dark:hover:bg-slate-700 text-slate-500 dark:text-slate-400 transition-all"
+                    onclick="closeCreateGroupModal()">
+                    <span class="material-symbols-outlined">close</span>
+                </button>
+            </div>
+
+            <div class="flex-1 overflow-y-auto p-6 space-y-6">
+                <div>
+                    <label
+                        class="block text-[10px] lg:text-xs font-black uppercase tracking-[0.15em] text-slate-400 dark:text-slate-500 mb-2">Group
+                        Name</label>
+                    <input type="text" id="new-group-name"
+                        class="w-full px-4 py-3 bg-slate-50 dark:bg-slate-900 border border-slate-200 dark:border-slate-700 rounded-xl focus:ring-2 focus:ring-primary/20 focus:border-primary outline-none transition-all text-base font-medium text-slate-900 dark:text-white placeholder-slate-400"
+                        placeholder="Enter group name..." />
+                </div>
+                <div>
+                    <label
+                        class="block text-[10px] lg:text-xs font-black uppercase tracking-[0.15em] text-slate-400 dark:text-slate-500 mb-3">
+                        Selected Devices <span id="selected-count-modal" class="text-primary">(0)</span>
+                    </label>
+                    <div class="space-y-2 max-h-64 overflow-y-auto custom-scrollbar" id="selected-devices-list">
+                    </div>
                 </div>
             </div>
 
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3 lg:gap-6 mb-4 lg:mb-8"
-                 id="device-list">
-            </div>
-
-            <div class="flex justify-center items-center gap-1.5 lg:gap-2 mb-4" id="pagination"></div>
-        </div>
-    </div>
-
-    <div id="upload-zone-container" class="px-4 lg:px-12 pb-4 lg:pb-8 flex-shrink-0"></div>
-</main>
-
-<div id="create-group-modal" class="fixed inset-0 z-50 hidden">
-    <div class="absolute inset-0 bg-black/50 backdrop-blur-sm" onclick="closeCreateGroupModal()"></div>
-    <div
-            class="absolute inset-4 lg:inset-auto lg:top-1/2 lg:left-1/2 lg:-translate-x-1/2 lg:-translate-y-1/2 lg:w-full lg:max-w-lg bg-white rounded-2xl shadow-2xl flex flex-col max-h-[90vh] overflow-hidden">
-        <div class="px-6 py-5 border-b border-slate-100 flex items-center justify-between">
-            <div>
-                <h3 class="text-xl font-bold text-slate-900">Create New Group</h3>
-                <p class="text-sm text-slate-500">Add selected devices to a new group</p>
-            </div>
-            <button class="p-2 rounded-lg hover:bg-slate-100 transition-all" onclick="closeCreateGroupModal()">
-                <span class="material-symbols-outlined text-slate-500">close</span>
-            </button>
-        </div>
-
-        <div class="flex-1 overflow-y-auto p-6 space-y-6">
-            <div>
-                <label
-                        class="block text-[10px] lg:text-xs font-black uppercase tracking-[0.15em] text-slate-400 mb-2">Group
-                    Name</label>
-                <input type="text" id="new-group-name"
-                       class="w-full px-4 py-3 bg-slate-50 border border-slate-200 rounded-xl focus:ring-2 focus:ring-primary/20 focus:border-primary outline-none transition-all text-base font-medium text-slate-900"
-                       placeholder="Enter group name..." />
-            </div>
-            <div>
-                <label
-                        class="block text-[10px] lg:text-xs font-black uppercase tracking-[0.15em] text-slate-400 mb-3">Selected
-                    Devices <span id="selected-count-modal" class="text-primary">(0)</span></label>
-                <div class="space-y-2 max-h-64 overflow-y-auto custom-scrollbar" id="selected-devices-list"></div>
-            </div>
-        </div>
-
-        <div class="px-6 py-4 border-t border-slate-100 bg-slate-50/50">
-            <div class="flex gap-3">
-                <button
-                        class="flex-1 py-3 rounded-xl border border-slate-200 text-slate-600 font-bold hover:bg-slate-100 transition-all"
+            <div class="px-6 py-4 border-t border-slate-100 dark:border-slate-700 bg-slate-50/50 dark:bg-slate-900/50">
+                <div class="flex gap-3">
+                    <button
+                        class="flex-1 py-3 rounded-xl border border-slate-200 dark:border-slate-700 text-slate-600 dark:text-slate-300 font-bold hover:bg-slate-100 dark:hover:bg-slate-700 transition-all"
                         onclick="closeCreateGroupModal()">Cancel</button>
-                <button
+                    <button
                         class="flex-1 py-3 rounded-xl bg-primary text-white font-bold shadow-lg shadow-primary/20 hover:brightness-105 active:scale-[0.99] transition-all"
                         onclick="confirmCreateGroup()">Create Group & Send</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div id="toast-container"
-     class="fixed top-10 left-1/2 -translate-x-1/2 z-[9999] flex flex-col gap-3 pointer-events-none items-center">
-</div>
+    <div id="toast-container"
+        class="fixed top-10 left-1/2 -translate-x-1/2 z-[9999] flex flex-col gap-3 pointer-events-none items-center">
+    </div>
 
-<script src="assets/js/theme.js"></script>
-<script type="module" src="assets/js/auth.js"></script>
-<script src="assets/js/fileStorage.js"></script>
-<script src="assets/js/groups.js" defer></script>
-<script src="assets/js/components.js" defer></script>
-<script src="assets/js/mobile-nav.js" defer></script>
-<script type="module" src="assets/js/app.js"></script>
+    <script src="assets/js/theme.js"></script>
+    <script type="module" src="assets/js/auth.js"></script>
+    <script src="assets/js/fileStorage.js"></script>
+    <script src="assets/js/groups.js" defer></script>
+    <script src="assets/js/components.js" defer></script>
+    <script src="assets/js/mobile-nav.js" defer></script>
+    <script type="module" src="assets/js/app.js"></script>
 </body>
 
 </html>
