--- a/frontend/pages/groups.html
+++ b/frontend/pages/groups.html
@@ -10,200 +10,184 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
-          rel="stylesheet" />
+        rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
-          rel="stylesheet" />
+        rel="stylesheet" />
 
     <link href="../assets/css/style.css" rel="stylesheet" />
-
-    <style>
-        /* Force group name to be visible in both modes */
-        .group-item h4 {
-            color: #0f172a !important; /* Dark text for light mode */
-        }
-        .group-item.active h4 {
-            color: #00d0ff !important; /* Primary for active */
-        }
-        html.dark .group-item h4 {
-            color: #f1f5f9 !important; /* Light text for dark mode */
-        }
-        html.dark .group-item.active h4 {
-            color: #00d0ff !important;
-        }
-
-        /* Ensure muted text is visible */
-        .group-item p {
-            color: #64748b !important;
-        }
-        html.dark .group-item p {
-            color: #94a3b8 !important;
-        }
-    </style>
 
     <script src="../assets/js/tailwind.config.js"></script>
 </head>
 
-<body class="min-h-screen flex flex-col lg:flex-row">
+<body class="min-h-screen flex flex-col lg:flex-row bg-slate-50 dark:bg-slate-900 transition-colors duration-300">
 
-<header
+    <header
         class="lg:hidden bg-white dark:bg-slate-800 border-b border-slate-200 dark:border-slate-700 px-4 py-3 flex items-center justify-between sticky top-0 z-50">
-    <div class="flex items-center gap-3">
-        <div class="bg-primary p-1.5 rounded-lg text-white">
-            <span class="material-symbols-outlined text-xl block">rocket_launch</span>
-        </div>
-        <h1 class="text-lg font-bold tracking-tight text-slate-900 dark:text-white">GopherDrop</h1>
-    </div>
-    <button id="mobile-menu-btn" class="p-2 rounded-lg hover:bg-slate-100 dark:hover:bg-slate-700 transition-all">
-        <span class="material-symbols-outlined text-2xl text-slate-600 dark:text-slate-300">menu</span>
-    </button>
-</header>
-
-<div id="sidebar-overlay" class="fixed inset-0 bg-black/50 z-40 hidden lg:hidden" onclick="closeMobileMenu()"></div>
-
-<div id="sidebar-container"
-     class="flex-shrink-0 fixed lg:relative left-0 top-0 h-full z-50 transform -translate-x-full lg:translate-x-0 transition-transform duration-300"
-     data-mobile-menu></div>
-
-<main class="flex-1 flex flex-col lg:flex-row overflow-hidden min-h-0">
-
-    <div id="group-list-container"
-         class="w-full lg:flex-1 bg-[var(--bg-secondary)] split-border flex flex-col h-full relative transition-all duration-300">
-        <div class="p-4 lg:p-8 border-b border-[var(--border-color)] bg-[var(--bg-main)]/50 backdrop-blur-sm">
-            <h2 class="text-xl lg:text-2xl font-bold text-[var(--text-main)] mb-4 lg:mb-6">Your Groups</h2>
-            <div class="relative">
-                    <span
-                            class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-[var(--text-muted)]">search</span>
-                <input
-                        class="w-full pl-12 pr-4 py-2.5 lg:py-3 bg-[var(--card-bg)] border border-[var(--border-color)] rounded-xl focus:ring-2 focus:ring-primary/20 focus:border-primary outline-none transition-all text-sm font-medium text-[var(--text-main)] placeholder-slate-400"
-                        placeholder="Search groups..." type="text" id="group-search" />
+        <div class="flex items-center gap-3">
+            <div class="bg-primary p-1.5 rounded-lg text-white">
+                <span class="material-symbols-outlined text-xl block">rocket_launch</span>
             </div>
+            <h1 class="text-lg font-bold tracking-tight text-slate-900 dark:text-white">GopherDrop</h1>
         </div>
+        <button id="mobile-menu-btn" class="p-2 rounded-lg hover:bg-slate-100 dark:hover:bg-slate-700 transition-all">
+            <span class="material-symbols-outlined text-2xl text-slate-600 dark:text-slate-300">menu</span>
+        </button>
+    </header>
 
-        <div class="flex-1 overflow-y-auto p-3 lg:p-4 space-y-2 lg:space-y-3 custom-scrollbar pb-20 lg:pb-24"
-             id="group-list">
-        </div>
+    <div id="sidebar-overlay" class="fixed inset-0 bg-black/50 z-40 hidden lg:hidden" onclick="closeMobileMenu()"></div>
+    <div id="sidebar-container"
+        class="flex-shrink-0 fixed lg:relative left-0 top-0 h-full z-50 transform -translate-x-full lg:translate-x-0 transition-transform duration-300"
+        data-mobile-menu></div>
 
-        <div class="add-group-container absolute bottom-0 left-0 right-0 p-3 lg:p-4">
-            <button
+    <main class="flex-1 flex flex-col lg:flex-row overflow-hidden min-h-0 relative">
+
+        <div id="group-list-container"
+            class="w-full lg:flex-1 bg-slate-50 dark:bg-slate-900 border-r border-slate-200 dark:border-slate-800 flex flex-col h-full relative transition-all duration-300">
+
+            <div
+                class="p-4 lg:p-8 border-b border-slate-200 dark:border-slate-800 bg-white/50 dark:bg-slate-900/50 backdrop-blur-sm sticky top-0 z-10">
+                <h2 class="text-xl lg:text-2xl font-bold text-slate-900 dark:text-white mb-4 lg:mb-6">Your Groups</h2>
+                <div class="relative">
+                    <span
+                        class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-slate-400 dark:text-slate-500">search</span>
+                    <input
+                        class="w-full pl-12 pr-4 py-2.5 lg:py-3 bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 rounded-xl focus:ring-2 focus:ring-primary/20 focus:border-primary outline-none transition-all text-sm font-medium text-slate-900 dark:text-white placeholder-slate-400 dark:placeholder-slate-500"
+                        placeholder="Search groups..." type="text" id="group-search" />
+                </div>
+            </div>
+
+            <div class="flex-1 overflow-y-auto p-3 lg:p-4 space-y-2 lg:space-y-3 custom-scrollbar pb-20 lg:pb-24"
+                id="group-list">
+            </div>
+
+            <div
+                class="absolute bottom-0 left-0 right-0 p-3 lg:p-4 bg-gradient-to-t from-slate-50 dark:from-slate-900 to-transparent">
+                <button
                     class="w-full flex items-center justify-center gap-2 lg:gap-3 bg-primary text-white px-4 lg:px-6 py-3 lg:py-4 rounded-xl lg:rounded-2xl font-bold shadow-xl shadow-primary/20 hover:scale-[1.02] active:scale-[0.98] transition-all text-sm lg:text-base"
                     id="add-group-btn">
-                <span class="material-symbols-outlined">add_circle</span>
-                Add Group
-            </button>
+                    <span class="material-symbols-outlined">add_circle</span>
+                    Add Group
+                </button>
+            </div>
         </div>
-    </div>
 
-    <div id="group-detail-container"
-         class="lg:flex-1 flex-col h-full bg-[var(--card-bg)] relative hidden transition-all duration-300">
-        <button
-                class="lg:hidden absolute top-4 left-4 z-20 p-2 rounded-lg bg-[var(--card-bg)] shadow-md hover:bg-[var(--bg-secondary)] transition-all"
+        <div id="group-detail-container"
+            class="lg:flex-1 flex-col h-full bg-white dark:bg-slate-800 relative hidden transition-all duration-300">
+
+            <button
+                class="lg:hidden absolute top-4 left-4 z-20 p-2 rounded-lg bg-white dark:bg-slate-800 shadow-md border border-slate-100 dark:border-slate-700 text-slate-600 dark:text-white hover:bg-slate-50 transition-all"
                 onclick="hideGroupDetail()">
-            <span class="material-symbols-outlined text-[var(--text-main)]">arrow_back</span>
-        </button>
+                <span class="material-symbols-outlined">arrow_back</span>
+            </button>
 
-        <div
-                class="px-4 lg:px-12 py-4 lg:py-8 border-b border-[var(--border-color)] flex flex-col sm:flex-row justify-between items-start gap-4 sticky top-0 bg-[var(--card-bg)]/80 backdrop-blur-md z-10">
-            <div class="pl-10 lg:pl-0">
-                <div class="flex items-center gap-2 lg:gap-3 mb-1 lg:mb-2">
-                    <span class="material-symbols-outlined text-primary text-lg lg:text-base">apartment</span>
-                    <span
+            <div
+                class="px-4 lg:px-12 py-4 lg:py-8 border-b border-slate-100 dark:border-slate-700 flex flex-col sm:flex-row justify-between items-start gap-4 sticky top-0 bg-white/80 dark:bg-slate-800/80 backdrop-blur-md z-10">
+                <div class="pl-12 lg:pl-0">
+                    <div class="flex items-center gap-2 lg:gap-3 mb-1 lg:mb-2">
+                        <span class="material-symbols-outlined text-primary text-lg lg:text-base">apartment</span>
+                        <span
                             class="text-[10px] lg:text-xs font-black uppercase tracking-[0.15em] lg:tracking-[0.2em] text-primary">Active
                             Group</span>
+                    </div>
+                    <h3 class="text-xl lg:text-3xl font-bold text-slate-900 dark:text-white" id="group-name"></h3>
+                    <p class="text-slate-500 dark:text-slate-400 text-sm lg:text-base mt-1" id="group-description"></p>
                 </div>
-                <h3 class="text-xl lg:text-3xl font-bold text-[var(--text-main)]" id="group-name"></h3>
-                <p class="text-[var(--text-muted)] text-sm lg:text-base mt-1" id="group-description"></p>
-            </div>
-            <div class="flex gap-2 lg:gap-3">
-                <button
-                        class="p-2 lg:p-3 rounded-lg lg:rounded-xl border border-[var(--border-color)] text-[var(--text-muted)] hover:bg-[var(--bg-secondary)]"
+                <div class="flex gap-2 lg:gap-3 pl-12 lg:pl-0">
+                    <button
+                        class="p-2 lg:p-3 rounded-lg lg:rounded-xl border border-slate-200 dark:border-slate-600 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-700 transition-colors"
                         id="edit-group-btn" onclick="navigateToEditGroup()">
-                    <span class="material-symbols-outlined text-lg lg:text-xl">edit</span>
-                </button>
-                <button
-                        class="p-2 lg:p-3 rounded-lg lg:rounded-xl border border-red-100 text-red-500 hover:bg-red-50"
+                        <span class="material-symbols-outlined text-lg lg:text-xl">edit</span>
+                    </button>
+                    <button
+                        class="p-2 lg:p-3 rounded-lg lg:rounded-xl border border-red-100 dark:border-red-900/30 text-red-500 hover:bg-red-50 dark:hover:bg-red-900/20 transition-colors"
                         id="delete-group-btn" onclick="deleteSelectedGroup()">
-                    <span class="material-symbols-outlined text-lg lg:text-xl">delete</span>
-                </button>
+                        <span class="material-symbols-outlined text-lg lg:text-xl">delete</span>
+                    </button>
+                </div>
             </div>
-        </div>
 
-        <div class="flex-1 overflow-y-auto custom-scrollbar">
-            <div class="p-4 lg:p-12 pb-24 lg:pb-32">
-                <section>
-                    <div class="flex items-center justify-between mb-4 lg:mb-6">
-                        <h4
-                                class="text-[10px] lg:text-sm font-black uppercase tracking-[0.15em] lg:tracking-[0.2em] text-[var(--text-muted)]">
-                            Member Devices</h4>
-                        <div class="flex items-center gap-2 text-primary font-bold text-xs lg:text-sm"
-                             id="online-count">
-                            <span class="w-2 h-2 rounded-full bg-green-500"></span>
-                            <span id="online-count-text">0 Online</span>
+            <div class="flex-1 overflow-y-auto custom-scrollbar bg-white dark:bg-slate-800">
+                <div class="p-4 lg:p-12 pb-24 lg:pb-32">
+                    <section>
+                        <div class="flex items-center justify-between mb-4 lg:mb-6">
+                            <h4
+                                class="text-[10px] lg:text-sm font-black uppercase tracking-[0.15em] lg:tracking-[0.2em] text-slate-400 dark:text-slate-500">
+                                Member Devices</h4>
+                            <div class="flex items-center gap-2 text-primary font-bold text-xs lg:text-sm"
+                                id="online-count">
+                                <span class="w-2 h-2 rounded-full bg-green-500"></span>
+                                <span id="online-count-text">0 Online</span>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="grid grid-cols-1 xl:grid-cols-2 gap-3 lg:gap-4" id="group-devices">
-                    </div>
-                </section>
+                        <div class="grid grid-cols-1 xl:grid-cols-2 gap-3 lg:gap-4" id="group-devices">
+                        </div>
+                    </section>
+                </div>
             </div>
-        </div>
 
-        <div
-                class="send-files-container p-4 lg:p-8 border-t border-[var(--border-color)] absolute bottom-0 left-0 right-0 z-20">
-            <button
+            <div
+                class="p-4 lg:p-8 border-t border-slate-100 dark:border-slate-700 bg-white dark:bg-slate-800 absolute bottom-0 left-0 right-0 z-20">
+                <button
                     class="w-full flex items-center justify-center gap-3 lg:gap-4 bg-primary text-white py-4 lg:py-5 rounded-xl lg:rounded-2xl font-bold shadow-lg shadow-primary/25 hover:brightness-105 active:scale-[0.99] transition-all"
                     id="send-files-btn">
-                <span class="material-symbols-outlined text-xl lg:text-2xl">send</span>
-                <span class="text-base lg:text-lg">Send Files to Group</span>
-            </button>
+                    <span class="material-symbols-outlined text-xl lg:text-2xl">send</span>
+                    <span class="text-base lg:text-lg">Send Files to Group</span>
+                </button>
+            </div>
+        </div>
+    </main>
+
+    <div id="add-device-to-group-modal" class="fixed inset-0 z-[60] hidden">
+        <div class="absolute inset-0 bg-slate-900/60 backdrop-blur-sm" onclick="closeAddDeviceToGroupModal()"></div>
+        <div
+            class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-sm bg-white dark:bg-slate-800 rounded-2xl shadow-2xl overflow-hidden transition-colors">
+            <div class="px-5 py-4 border-b border-slate-100 dark:border-slate-700 flex justify-between items-center">
+                <h3 class="font-bold text-slate-900 dark:text-white">Add Online Device</h3>
+                <button onclick="closeAddDeviceToGroupModal()"
+                    class="text-slate-400 hover:text-slate-600 dark:hover:text-slate-300 transition-colors">
+                    <span class="material-symbols-outlined text-lg">close</span>
+                </button>
+            </div>
+            <div class="p-4 max-h-64 overflow-y-auto custom-scrollbar space-y-2 bg-white dark:bg-slate-800"
+                id="add-device-list-container">
+            </div>
+            <div
+                class="p-4 bg-slate-50 dark:bg-slate-900/50 border-t border-slate-100 dark:border-slate-700 flex justify-end">
+                <button onclick="confirmAddDevicesToGroup()"
+                    class="bg-primary text-white font-bold px-4 py-2 rounded-xl text-sm shadow-lg shadow-primary/20 hover:brightness-105 transition-all">
+                    Add Selected
+                </button>
+            </div>
         </div>
     </div>
-</main>
 
-<div id="add-device-to-group-modal" class="fixed inset-0 z-[60] hidden">
-    <div class="absolute inset-0 bg-black/50 backdrop-blur-sm" onclick="closeAddDeviceToGroupModal()"></div>
-    <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-sm bg-white dark:bg-slate-800 rounded-2xl shadow-2xl overflow-hidden transition-colors">
-        <div class="px-5 py-4 border-b border-slate-100 dark:border-slate-700 flex justify-between items-center">
-            <h3 class="font-bold text-slate-900 dark:text-white">Add Online Device</h3>
-            <button onclick="closeAddDeviceToGroupModal()" class="text-slate-400 hover:text-slate-600 dark:hover:text-slate-300">
-                <span class="material-symbols-outlined text-lg">close</span>
-            </button>
-        </div>
-        <div class="p-4 max-h-64 overflow-y-auto custom-scrollbar space-y-2" id="add-device-list-container">
-        </div>
-        <div class="p-4 bg-slate-50 dark:bg-slate-900/50 border-t border-slate-100 dark:border-slate-700 flex justify-end">
-            <button onclick="confirmAddDevicesToGroup()" class="bg-primary text-white font-bold px-4 py-2 rounded-xl text-sm shadow-lg shadow-primary/20 hover:brightness-105 transition-all">
-                Add Selected
-            </button>
-        </div>
-    </div>
-</div>
+    <script src="../assets/js/theme.js"></script>
+    <script src="../assets/js/fileStorage.js"></script>
+    <script src="../assets/js/components.js"></script>
+    <script type="module" src="../assets/js/auth.js"></script>
+    <script type="module" src="../assets/js/app.js"></script>
+    <script src="../assets/js/groups.js?v=7"></script>
 
-<script src="../assets/js/theme.js"></script>
-<script src="../assets/js/fileStorage.js"></script>
-<script src="../assets/js/components.js"></script>
-<script type="module" src="../assets/js/auth.js"></script>
-<script type="module" src="../assets/js/app.js"></script>
-<script src="../assets/js/groups.js?v=5"></script>
+    <script>
+        function openMobileMenu() {
+            const sidebar = document.querySelector('[data-mobile-menu]');
+            const overlay = document.getElementById('sidebar-overlay');
+            sidebar.classList.remove('-translate-x-full');
+            overlay.classList.remove('hidden');
+            document.body.style.overflow = 'hidden';
+        }
 
-<script>
-    function openMobileMenu() {
-        const sidebar = document.querySelector('[data-mobile-menu]');
-        const overlay = document.getElementById('sidebar-overlay');
-        sidebar.classList.remove('-translate-x-full');
-        overlay.classList.remove('hidden');
-        document.body.style.overflow = 'hidden';
-    }
+        function closeMobileMenu() {
+            const sidebar = document.querySelector('[data-mobile-menu]');
+            const overlay = document.getElementById('sidebar-overlay');
+            sidebar.classList.add('-translate-x-full');
+            overlay.classList.add('hidden');
+            document.body.style.overflow = '';
+        }
 
-    function closeMobileMenu() {
-        const sidebar = document.querySelector('[data-mobile-menu]');
-        const overlay = document.getElementById('sidebar-overlay');
-        sidebar.classList.add('-translate-x-full');
-        overlay.classList.add('hidden');
-        document.body.style.overflow = '';
-    }
-
-    document.getElementById('mobile-menu-btn')?.addEventListener('click', openMobileMenu);
-</script>
+        document.getElementById('mobile-menu-btn')?.addEventListener('click', openMobileMenu);
+    </script>
 </body>
 
 </html>
